--- a/conf/config.ini
+++ b/conf/config.ini
@@ -10,8 +10,8 @@
 ; Can be removed; defaults to HOME_DIR/.kresus.
 ; Overriden by the KRESUS_DIR environment variable, if it's set.
 ; Example:
-; datadir=/home/ben/.kresus
-datadir=__FINALPATH__/data/
+; data_dir=/home/ben/.kresus
+data_dir=__INSTALL_DIR__/data/
 
 ; A user id obtained from using the "kresus create-user" command.
 ; This allows sharing a single database with several users. If your
@@ -45,7 +45,7 @@ host=127.0.0.1
 ; Overriden by the KRESUS_PYTHON_EXEC environment variable, if it's set.
 ; Example:
 ; python_exec=python3
-python_exec=__FINALPATH__/venv/bin/python
+python_exec=__INSTALL_DIR__/venv/bin/python
 
 ; The directory prefix in the URL, if Kresus is to be served from a
 ; subdirectory. For instance, if your website is hosted at example.com
@@ -192,7 +192,7 @@ appriseApiBaseUrl=
 [logs]
 
 ; The path to the log file to use. If empty, defaults to kresus.log
-; in datadir.
+; in data_dir.
 ; Overriden by the KRESUS_LOG_FILE environment variable, if it's set.
 ; Example:
 ; log_file=/var/log/kresus.log
