--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -6,10 +6,10 @@ After=syslog.target network.target
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__FINALPATH__/
+WorkingDirectory=__INSTALL_DIR__/
 Environment="__YNH_NODE_LOAD_PATH__"
 Environment=NODE_ENV=production
-ExecStart=__FINALPATH__/bin/kresus.js --config __FINALPATH__/config.ini
+ExecStart=__INSTALL_DIR__/bin/kresus.js --config __INSTALL_DIR__/config.ini
 Restart=always
 StandardOutput=syslog
 StandardError=syslog
@@ -51,7 +51,7 @@ SystemCallErrorNumber=EPERM
 #  https://linux.m2osw.com/snapwebsites-postfixpostdrop18189-warning-mailqueueenter-create-file-maildrop25937318189-permission
 # Future wait for this ticket to be resolved: https://github.com/YunoHost/issues/issues/947
 SupplementaryGroups=postdrop
-ReadWritePaths=__FINALPATH__/config.ini __FINALPATH__/data/ /var/spool/postfix/maildrop/
+ReadWritePaths=__INSTALL_DIR__/config.ini __INSTALL_DIR__/data/ /var/spool/postfix/maildrop/
 
 
 [Install]
