--- a/conf/config.ini
+++ b/conf/config.ini
@@ -10,7 +10,7 @@
 ; Can be removed; defaults to HOME_DIR/.kresus.
 ; Overriden by the KRESUS_DIR environment variable, if it's set.
 ; Example:
-; data_dir=/home/ben/.kresus
+; datadir=/home/ben/.kresus
 datadir=__INSTALL_DIR__/data/
 
 ; A user id obtained from using the "kresus create-user" command.
