--- a/conf/config.ini
+++ b/conf/config.ini
@@ -11,7 +11,7 @@
 ; Overriden by the KRESUS_DIR environment variable, if it's set.
 ; Example:
 ; datadir=/home/ben/.kresus
-datadir=__INSTALL_DIR__/data/
+datadir=__DATA_DIR__/
 
 ; A user id obtained from using the "kresus create-user" command.
 ; This allows sharing a single database with several users. If your
